--- a/demo-SiKaPProfESi/index.html
+++ b/demo-SiKaPProfESi/index.html
@@ -172,9 +172,10 @@ body { background: var(--light); color: var(--dark); font-size: 13px; overflow-x
 .logo-kiri { position: absolute; top: 7px; left: 10px; width: 40px; height: 40px; object-fit: contain; }
 .logo-kanan { position: absolute; top: 7px; right: 10px; width: 40px; height: 40px; object-fit: contain; }
 .header-text-center { margin: 0 50px; }
-.txt-instansi-center { font-family: Arial Narrow, sans-serif; font-size: 12px; font-weight: 700; text-transform: uppercase; color: #000; }
-.txt-sekolah-center { font-family: Arial Narrow, sans-serif; font-size: 16px; font-weight: 750; text-transform: uppercase; margin: 1.1px 0; color: #000; }
-.txt-alamat-center { font-family: Arial Narrow, sans-serif; font-size: 9px; font-weight: 150; color: #000; margin-top: 0.5px; }
+/* Menggunakan font dari Google Fonts yang pasti konsisten di HP maupun Laptop */
+.txt-instansi-center { font-family: 'Oswald', sans-serif; font-size: 13px; font-weight: 600; text-transform: uppercase; color: #000; letter-spacing: 0.5px; }
+.txt-sekolah-center { font-family: 'Oswald', sans-serif; font-size: 17px; font-weight: 700; text-transform: uppercase; margin: 1px 0; color: #000; line-height: 1.2; letter-spacing: 0.5px; }
+.txt-alamat-center { font-family: 'Roboto', sans-serif; font-size: 8px; font-weight: 400; color: #000; margin-top: 2px; }
 .header-line { margin: 0 5px; height: 1px; border-top: 1px solid #000; border-bottom: 2px solid #000; margin-top: 4px; }
 .txt-kartupelajar-center { font-family: Arial, sans-serif; font-size: 18px; text-align: center; font-weight: 800; margin: 2px 0; color: #000; }
 .card-body-new { display: flex; padding: 3px 9px; margin-top: 0px; height: 100%; }
@@ -187,7 +188,7 @@ body { background: var(--light); color: var(--dark); font-size: 13px; overflow-x
 /* Mengatur posisi jarak dari bawah dan kanan (misal kita buat jarak 5px dari tepi) */
 .qr-area-new { position: absolute; bottom: 3px; right: 3px; background: white; padding: 1px; border: 0px solid #ccc; }
 /* Mengatur ukuran tampilannya, silakan ubah 75px menjadi lebih besar/kecil sesuai selera */
-#qrcode img { width: 90px; height: 90px; display:block; }
+#qrcode img { width: 88px; height: 88px; display:block; }
 
 .loader-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.9); z-index: 9999; display: flex; flex-direction: column; align-items: center; justify-content: center; color: white; }
 .spinner { width: 40px; height: 40px; border: 4px solid #fff; border-top-color: var(--primary); border-radius: 50%; animation: spin 1s linear infinite; }
@@ -1106,7 +1107,7 @@ function viewCard(row, role) {
    
    var logo1 = document.getElementById('card-logo-instansi'), logo2 = document.getElementById('card-logo-sekolah'), bgBack = document.getElementById('card-bg-back');
    logo1.style.display = 'none'; logo2.style.display = 'none'; bgBack.src = DEFAULT_IMG;
-   new QRCode(document.getElementById("qrcode"), {text: String(d.nisn), width:90, height:90});
+   new QRCode(document.getElementById("qrcode"), {text: String(d.nisn), width:88, height:88});
    
    apiCall('getSemuaGambarKartu', {fotoUrl: d.foto_url, bgDepan: settings.Background_Kartu, bgBelakang: settings.Background_Belakang, logoInstansi: settings.Logo_Instansi, logoSekolah: settings.Logo_Sekolah}, res => {
        clearInterval(intervalCard);
