--- a/demo-SiKaPProfESi/index.html
+++ b/demo-SiKaPProfESi/index.html
@@ -766,7 +766,7 @@ div:where(.swal2-container) { font-family: 'Poppins', sans-serif !important; z-i
                      <img id="card-bg-back" style="width:100%; height:100%; object-fit:cover;">
                  </div>
              </div>
-             
+             <p style="font-size:7px">Ket: Format kop pada kartu pelajar mengikuti format pada Permendagri No. 1 Tahun 2023 adalah peraturan tentang Tata Naskah Dinas di Lingkungan Pemerintah Daerah </p>
              <div style="margin-top:20px; display:flex; flex-direction:column; gap:10px;">
                  <button onclick="downloadPNG()" class="btn primary block">DOWNLOAD KARTU PELAJAR (DEPAN)</button>
                  <button onclick="downloadBack()" class="btn info block">DOWNLOAD KARTU (BELAKANG)</button>
