--- a/demo-SiKaPProfESi/index.html
+++ b/demo-SiKaPProfESi/index.html
@@ -188,7 +188,7 @@ body { background: var(--light); color: var(--dark); font-size: 13px; overflow-x
 /* Mengatur posisi jarak dari bawah dan kanan (misal kita buat jarak 5px dari tepi) */
 .qr-area-new { position: absolute; bottom: 3px; right: 3px; background: white; padding: 1px; border: 0px solid #ccc; }
 /* Mengatur ukuran tampilannya, silakan ubah 75px menjadi lebih besar/kecil sesuai selera */
-#qrcode img { width: 88px; height: 88px; display:block; }
+#qrcode img { width: 85px; height: 85px; display:block; }
 
 .loader-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.9); z-index: 9999; display: flex; flex-direction: column; align-items: center; justify-content: center; color: white; }
 .spinner { width: 40px; height: 40px; border: 4px solid #fff; border-top-color: var(--primary); border-radius: 50%; animation: spin 1s linear infinite; }
@@ -766,7 +766,7 @@ div:where(.swal2-container) { font-family: 'Poppins', sans-serif !important; z-i
                      <img id="card-bg-back" style="width:100%; height:100%; object-fit:cover;">
                  </div>
              </div>
-             <p style="font-size:7px">Ket: Format kop pada kartu pelajar mengikuti format pada Permendagri No. 1 Tahun 2023 adalah peraturan tentang Tata Naskah Dinas di Lingkungan Pemerintah Daerah </p>
+             <p style="font-size:9px">Ket: Format kop pada kartu pelajar mengikuti contoh Kop Surat pada Permendagri No. 1 Tahun 2023 tentang Tata Naskah Dinas di Lingkungan Pemerintah Daerah </p>
              <div style="margin-top:20px; display:flex; flex-direction:column; gap:10px;">
                  <button onclick="downloadPNG()" class="btn primary block">DOWNLOAD KARTU PELAJAR (DEPAN)</button>
                  <button onclick="downloadBack()" class="btn info block">DOWNLOAD KARTU (BELAKANG)</button>
@@ -1107,7 +1107,7 @@ function viewCard(row, role) {
    
    var logo1 = document.getElementById('card-logo-instansi'), logo2 = document.getElementById('card-logo-sekolah'), bgBack = document.getElementById('card-bg-back');
    logo1.style.display = 'none'; logo2.style.display = 'none'; bgBack.src = DEFAULT_IMG;
-   new QRCode(document.getElementById("qrcode"), {text: String(d.nisn), width:88, height:88});
+   new QRCode(document.getElementById("qrcode"), {text: String(d.nisn), width:85, height:85});
    
    apiCall('getSemuaGambarKartu', {fotoUrl: d.foto_url, bgDepan: settings.Background_Kartu, bgBelakang: settings.Background_Belakang, logoInstansi: settings.Logo_Instansi, logoSekolah: settings.Logo_Sekolah}, res => {
        clearInterval(intervalCard);
