--- a/demo-SiDiMAS/index.html
+++ b/demo-SiDiMAS/index.html
@@ -110,16 +110,16 @@ input, button, select, textarea {
   <div id="view-login">
     <div class="login-container">
       <div class="login-logos mb-3"><img id="logLogo1" class="login-logo" src=""><img id="logLogo2" class="login-logo" src=""></div>
-      <div class="login-instansi" id="logInstansi">INSTANSI</div>
-      <div class="login-sekolah" id="logSekolah">LOADING SYSTEM...</div>
+      <div class="login-instansi" id="logInstansi">PEMERINTAH...loading....</div>
+      <div class="login-sekolah" id="logSekolah">LOADING.........</div>
       <hr>
       <center><div>
         <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiy-QcPa6KHScTMhHyA80pZuyStlekpqfdHVhyphenhyphenF-D9CwYNIqLBYra6v1lIO8ndNYU-xCUQl1oBrreAxnH577Diizy_abGpPVs5ocGnfeChx9z5-VzFYMQ-rO9zz61YFXWDEL_n8Vel_JgrL_AHngRpetF0deDJNQ8H0l4j4qUjDwVWpn2kf6_q2UBKGN8tg/s709/logo%20sidimas%20png.png" alt="Logo" class="login-logo2">
         <p class="text-muted small mb-4" style="font-weight: 600">Sistem Digital Manajemen Arsip Surat</p> 
       </div></center>
       <form onsubmit="prosesLogin(event)" autocomplete="off">
-        <div class="form-floating mb-3 text-start"><input id="u" class="form-control" placeholder="U" required><label>Username</label></div>
-        <div class="input-group mb-4"><div class="form-floating flex-grow-1 text-start"><input id="p" type="password" class="form-control" placeholder="P" required><label>Password</label></div><button class="btn btn-outline-secondary" type="button" onclick="togglePass()"><i class="fas fa-eye" id="iconPass"></i></button></div>
+        <div class="form-floating mb-3 text-start"><input id="u" class="form-control" placeholder="U" required><label>Username (admin)</label></div>
+        <div class="input-group mb-4"><div class="form-floating flex-grow-1 text-start"><input id="p" type="password" class="form-control" placeholder="P" required><label>Password (demo123)</label></div><button class="btn btn-outline-secondary" type="button" onclick="togglePass()"><i class="fas fa-eye" id="iconPass"></i></button></div>
         <button id="btnLogin" class="btn btn-primary w-100 py-2 fw-bold text-uppercase rounded-pill"><span>Masuk Aplikasi</span><span class="spinner-border spinner-border-sm hide" role="status"></span></button>
       </form>
     </div>
@@ -937,8 +937,8 @@ input, button, select, textarea {
   /*--KHUSUS DEMO DINONAKTIFKAN EDIT DAN HAPUS--*/
   function loadUsers() { apiCall('getUsersList')
   .then(r=>{ let h=''; r.forEach(u=>{ h+=`<tr><td>${u[0]}</td><td>******</td><td>${u[2]}</td><td>${u[3]}</td><td>
-  <button class="btn btn-sm btn-warning" onclick="modalUser('edit','${u[0]}','${u[1]}','${u[2]}','${u[3]}')" title="Edit"><i class="fas fa-edit"></i></button>
-  <button class="btn btn-sm btn-danger" onclick="delUser('${u[0]}')" title="Hapus"><i class="fas fa-trash"></i></button>
+  <!-- <button class="btn btn-sm btn-warning" onclick="modalUser('edit','${u[0]}','${u[1]}','${u[2]}','${u[3]}')" title="Edit"><i class="fas fa-edit"></i></button>
+  <button class="btn btn-sm btn-danger" onclick="delUser('${u[0]}')" title="Hapus"><i class="fas fa-trash"></i></button> -->
   </td></tr>`; }); $('#tbody-users').html(h); }); }
 
   
