--- a/demo-SiAbDi/index.html
+++ b/demo-SiAbDi/index.html
@@ -408,11 +408,11 @@ input, button, select, textarea {
                                   </table>
                               </div>
                           </div>
-                          <table style="width: 100%; border-collapse: collapse; font-size: 11px; margin-top: 10px;">
+                          <table style="width: 100%; border-collapse: collapse; font-size: 11px; margin-top: 4px;">
                               <thead>
                                   <tr style="background-color: #f3f4f6;">
                                       <th style="border: 1px solid #000; padding: 10px; width: 40px; text-align: center;">No</th>
-                                      <th style="border: 1px solid #000; padding: 10px; width: 150px; text-align: center;">Tanggal / Hari</th>
+                                      <th style="border: 1px solid #000; padding: 10px; width: 200px; text-align: center;">Hari / Tanggal</th>
                                       <th style="border: 1px solid #000; padding: 10px; width: 100px; text-align: center;">Status</th>
                                       <th style="border: 1px solid #000; padding: 10px;">Keterangan</th>
                                   </tr>
