--- a/demo-SiAbDi/index.html
+++ b/demo-SiAbDi/index.html
@@ -383,7 +383,7 @@ input, button, select, textarea {
                   </div>
 
                   <div class="fixed top-0 left-0 z-[-10] opacity-0 pointer-events-none overflow-hidden" style="width: 0; height: 0;">
-                      <div id="printAreaRekapSiswa" class="bg-white text-black p-8" style="width: 800px; min-height: 1123px; position: absolute; left: 0; top: 0; font-family: 'Arial Narrow', serif;">
+                      <div id="printAreaRekapSiswa" class="bg-white text-black p-8" style="width: 800px; min-height: 1123px; position: absolute; left: 0; top: 0; font-family: 'Arial', serif;">
                           <div style="display: flex; align-items: center; border-bottom: 3px solid #000; padding-bottom: 15px; margin-bottom: 25px;">
                               <img id="printLogoSiswa" src="" style="width: 80px; height: 80px; object-fit: contain;">
                               <div style="flex: 1; text-align: center;">
@@ -411,10 +411,10 @@ input, button, select, textarea {
                           <table style="width: 100%; border-collapse: collapse; font-size: 11px; margin-top: 4px;">
                               <thead>
                                   <tr style="background-color: #f3f4f6;">
-                                      <th style="border: 1px solid #000; padding: 10px; width: 40px; text-align: center;">No</th>
-                                      <th style="border: 1px solid #000; padding: 10px; width: 200px; text-align: center;">Hari / Tanggal</th>
-                                      <th style="border: 1px solid #000; padding: 10px; width: 100px; text-align: center;">Status</th>
-                                      <th style="border: 1px solid #000; padding: 10px;">Keterangan</th>
+                                      <th style="border: 1px solid #000; padding: 6px; width: 40px; text-align: center;">No</th>
+                                      <th style="border: 1px solid #000; padding: 6px; width: 200px; text-align: center;">Hari / Tanggal</th>
+                                      <th style="border: 1px solid #000; padding: 6px; width: 100px; text-align: center;">Status</th>
+                                      <th style="border: 1px solid #000; padding: 6px;">Keterangan</th>
                                   </tr>
                               </thead>
                               <tbody id="printTbodyRekapSiswa"></tbody>
@@ -2211,10 +2211,10 @@ async function downloadPDFRekapSiswa() {
         const tbodyPrint = document.getElementById('printTbodyRekapSiswa');
         tbodyPrint.innerHTML = rs_currentData.map((d, i) => `
             <tr>
-                <td style="border: 1px solid #000; padding: 8px; text-align: center;">${i+1}</td>
-                <td style="border: 1px solid #000; padding: 8px; text-align: center;">${new Date(d.tanggal).toLocaleDateString('id-ID', {weekday:'long', day: 'numeric', month: 'long', year: 'numeric'})}</td>
-                <td style="border: 1px solid #000; padding: 8px; text-align: center; font-weight: bold;">${d.status}</td>
-                <td style="border: 1px solid #000; padding: 8px;">${d.keterangan || '-'}</td>
+                <td style="border: 1px solid #000; padding: 6px; text-align: center;">${i+1}</td>
+                <td style="border: 1px solid #000; padding: 6px; text-align: center;">${new Date(d.tanggal).toLocaleDateString('id-ID', {weekday:'long', day: 'numeric', month: 'long', year: 'numeric'})}</td>
+                <td style="border: 1px solid #000; padding: 6px; text-align: center; font-weight: bold;">${d.status}</td>
+                <td style="border: 1px solid #000; padding: 6px;">${d.keterangan || '-'}</td>
             </tr>
         `).join('');
 
