--- a/demo-SiAbDi/index.html
+++ b/demo-SiAbDi/index.html
@@ -411,10 +411,10 @@ input, button, select, textarea {
                           <table style="width: 100%; border-collapse: collapse; font-size: 11px; margin-top: 4px;">
                               <thead>
                                   <tr style="background-color: #f3f4f6;">
-                                      <th style="border: 1px solid #000; padding: 6px; width: 40px; text-align: center;">No</th>
-                                      <th style="border: 1px solid #000; padding: 6px; width: 200px; text-align: center;">Hari / Tanggal</th>
-                                      <th style="border: 1px solid #000; padding: 6px; width: 100px; text-align: center;">Status</th>
-                                      <th style="border: 1px solid #000; padding: 6px;">Keterangan</th>
+                                      <th style="border: 1px solid #000; padding-bottom: 5px; width: 40px; vertical-align: middle;">No</th>
+                                      <th style="border: 1px solid #000; padding-bottom: 5px; width: 200px; vertical-align: middle;">Hari / Tanggal</th>
+                                      <th style="border: 1px solid #000; padding-bottom: 5px; width: 100px; vertical-align: middle;">Status</th>
+                                      <th style="border: 1px solid #000; padding-bottom: 5px;">Keterangan</th>
                                   </tr>
                               </thead>
                               <tbody id="printTbodyRekapSiswa"></tbody>
