--- a/demo-SiAbDi/index.html
+++ b/demo-SiAbDi/index.html
@@ -408,17 +408,19 @@ input, button, select, textarea {
                                   </table>
                               </div>
                           </div>
-                          <table style="width: 100%; border-collapse: collapse; font-size: 11px; margin-top: 0px;">
-                              <thead>
-                                  <tr style="background-color: #f3f4f6;">
-                                      <th style="border: 1px solid #000; padding: 6px; height: 20px; width: 40px; text-align: center; vertical-align: middle;">No</th>
-                                      <th style="border: 1px solid #000; padding: 6px; height: 20px; width: 200px; text-align: center; vertical-align: middle;">Tanggal / Hari</th>
-                                      <th style="border: 1px solid #000; padding: 6px; height: 20px; width: 100px; text-align: center; vertical-align: middle;">Status</th>
-                                      <th style="border: 1px solid #000; padding: 6px; height: 20px; text-align: center; vertical-align: middle;">Keterangan</th>
-                                  </tr>
-                              </thead>
-                              <tbody id="printTbodyRekapSiswa"></tbody>
-                          </table>
+                  
+                              <table style="width: 100%; border-collapse: collapse; font-size: 11px; margin-top: 10px;">
+                                  <thead>
+                                      <tr style="background-color: #e5e7eb;">
+                                          <th style="border: 1px solid #000; padding: 8px 4px; width: 40px; text-align: center; vertical-align: middle; line-height: 1.2;">No</th>
+                                          <th style="border: 1px solid #000; padding: 8px 4px; width: 200px; text-align: center; vertical-align: middle; line-height: 1.2;">Tanggal / Hari</th>
+                                          <th style="border: 1px solid #000; padding: 8px 4px; width: 100px; text-align: center; vertical-align: middle; line-height: 1.2;">Status</th>
+                                          <th style="border: 1px solid #000; padding: 8px 4px; text-align: center; vertical-align: middle; line-height: 1.2;">Keterangan</th>
+                                      </tr>
+                                  </thead>
+                                  <tbody id="printTbodyRekapSiswa"></tbody>
+                              </table>
+              
                       </div>
                   </div>
               </div>
@@ -2207,14 +2209,15 @@ async function downloadPDFRekapSiswa() {
         document.getElementById('printSiswaKelas').textContent = currentUser.kelas;
         document.getElementById('printSiswaPeriode').textContent = `${blnText} ${thnText}`;
 
-        // Isi Tabel Print (Tambahkan perataan tengah atas-bawah dan kiri-kanan)
+
+            // Isi Tabel Print (Padding dikecilkan jadi 4px agar pas dengan huruf, line-height diatur 1.2)
         const tbodyPrint = document.getElementById('printTbodyRekapSiswa');
         tbodyPrint.innerHTML = rs_currentData.map((d, i) => `
             <tr>
-                <td style="border: 1px solid #000; padding: 8px; text-align: center; vertical-align: middle;">${i+1}</td>
-                <td style="border: 1px solid #000; padding: 8px; text-align: center; vertical-align: middle;">${new Date(d.tanggal).toLocaleDateString('id-ID', {weekday:'long', day: 'numeric', month: 'long', year: 'numeric'})}</td>
-                <td style="border: 1px solid #000; padding: 8px; text-align: center; font-weight: bold; vertical-align: middle;">${d.status}</td>
-                <td style="border: 1px solid #000; padding: 8px; text-align: center; vertical-align: middle;">${d.keterangan || '-'}</td>
+                <td style="border: 1px solid #000; padding: 4px; text-align: center; vertical-align: middle; line-height: 1.2;">${i+1}</td>
+                <td style="border: 1px solid #000; padding: 4px; text-align: center; vertical-align: middle; line-height: 1.2;">${new Date(d.tanggal).toLocaleDateString('id-ID', {weekday:'long', day: 'numeric', month: 'long', year: 'numeric'})}</td>
+                <td style="border: 1px solid #000; padding: 4px; text-align: center; font-weight: bold; vertical-align: middle; line-height: 1.2;">${d.status}</td>
+                <td style="border: 1px solid #000; padding: 4px; text-align: center; vertical-align: middle; line-height: 1.2;">${d.keterangan || '-'}</td>
             </tr>
         `).join('');
 
