--- a/demo-SiAbDi/index.html
+++ b/demo-SiAbDi/index.html
@@ -409,13 +409,13 @@ input, button, select, textarea {
                               </div>
                           </div>
                   
-                              <table style="width: 100%; border-collapse: collapse; font-size: 11px; margin-top: 10px;">
+                              <table style="width: 100%; border-collapse: collapse; margin-top: 10px;">
                                   <thead>
                                       <tr style="background-color: #e5e7eb;">
-                                          <th style="border: 1px solid #000; padding: 8px 4px; width: 40px; text-align: center; vertical-align: middle; line-height: 1.2;">No</th>
-                                          <th style="border: 1px solid #000; padding: 8px 4px; width: 200px; text-align: center; vertical-align: middle; line-height: 1.2;">Tanggal / Hari</th>
-                                          <th style="border: 1px solid #000; padding: 8px 4px; width: 100px; text-align: center; vertical-align: middle; line-height: 1.2;">Status</th>
-                                          <th style="border: 1px solid #000; padding: 8px 4px; text-align: center; vertical-align: middle; line-height: 1.2;">Keterangan</th>
+                                          <th style="border: 1px solid #000; padding: 6px 4px; width: 40px; text-align: center; vertical-align: middle; font-size: 11px; line-height: 1;">No</th>
+                                          <th style="border: 1px solid #000; padding: 6px 4px; width: 150px; text-align: center; vertical-align: middle; font-size: 11px; line-height: 1;">Tanggal / Hari</th>
+                                          <th style="border: 1px solid #000; padding: 6px 4px; width: 100px; text-align: center; vertical-align: middle; font-size: 11px; line-height: 1;">Status</th>
+                                          <th style="border: 1px solid #000; padding: 6px 4px; text-align: center; vertical-align: middle; font-size: 11px; line-height: 1;">Keterangan</th>
                                       </tr>
                                   </thead>
                                   <tbody id="printTbodyRekapSiswa"></tbody>
@@ -2210,14 +2210,14 @@ async function downloadPDFRekapSiswa() {
         document.getElementById('printSiswaPeriode').textContent = `${blnText} ${thnText}`;
 
 
-            // Isi Tabel Print (Padding dikecilkan jadi 4px agar pas dengan huruf, line-height diatur 1.2)
+          // Isi Tabel Print (Mengakali bug html2canvas dengan font-size 11px dan line-height 1)
         const tbodyPrint = document.getElementById('printTbodyRekapSiswa');
         tbodyPrint.innerHTML = rs_currentData.map((d, i) => `
             <tr>
-                <td style="border: 1px solid #000; padding: 4px; text-align: center; vertical-align: middle; line-height: 1.2;">${i+1}</td>
-                <td style="border: 1px solid #000; padding: 4px; text-align: center; vertical-align: middle; line-height: 1.2;">${new Date(d.tanggal).toLocaleDateString('id-ID', {weekday:'long', day: 'numeric', month: 'long', year: 'numeric'})}</td>
-                <td style="border: 1px solid #000; padding: 4px; text-align: center; font-weight: bold; vertical-align: middle; line-height: 1.2;">${d.status}</td>
-                <td style="border: 1px solid #000; padding: 4px; text-align: center; vertical-align: middle; line-height: 1.2;">${d.keterangan || '-'}</td>
+                <td style="border: 1px solid #000; padding: 6px 4px; text-align: center; vertical-align: middle; font-size: 11px; line-height: 1;">${i+1}</td>
+                <td style="border: 1px solid #000; padding: 6px 4px; text-align: center; vertical-align: middle; font-size: 11px; line-height: 1;">${new Date(d.tanggal).toLocaleDateString('id-ID', {weekday:'long', day: 'numeric', month: 'long', year: 'numeric'})}</td>
+                <td style="border: 1px solid #000; padding: 6px 4px; text-align: center; font-weight: bold; vertical-align: middle; font-size: 11px; line-height: 1;">${d.status}</td>
+                <td style="border: 1px solid #000; padding: 6px 4px; text-align: center; vertical-align: middle; font-size: 11px; line-height: 1;">${d.keterangan || '-'}</td>
             </tr>
         `).join('');
 
