--- a/demo-SiAbDi/index.html
+++ b/demo-SiAbDi/index.html
@@ -383,7 +383,7 @@ input, button, select, textarea {
                   </div>
 
                   <div class="fixed top-0 left-0 z-[-10] opacity-0 pointer-events-none overflow-hidden" style="width: 0; height: 0;">
-                     <div id="printAreaRekapSiswa" class="bg-white text-black p-8" style="width: 800px; min-height: 1123px; position: absolute; left: 0; top: 0; font-family: 'Arial', serif;">
+                     <div id="printAreaRekapSiswa" class="bg-white text-black" style="padding: 40px 60px; width: 800px; min-height: 1123px; position: absolute; left: 0; top: 0; font-family: 'Arial', sans-serif; box-sizing: border-box;">
                           <div style="display: flex; align-items: center; border-bottom: 3px solid #000; padding-bottom: 15px; margin-bottom: 15px;">
                               <img id="printLogoSiswa" src="" style="width: 80px; height: 80px; object-fit: contain;">
                               <div style="flex: 1; text-align: center;">
@@ -409,13 +409,13 @@ input, button, select, textarea {
                               </div>
                           </div>
                   
-                              <table style="width: 100%; border-collapse: collapse; margin-top: 10px; font-family: Arial, sans-serif;">
+                              <table style="width: 100%; border-collapse: collapse; margin-top: 5px; font-family: Arial, sans-serif;">
                                   <thead>
                                       <tr style="background-color: #e5e7eb;">
-                                          <th style="border: 1px solid #000; padding: 0px 4px 12px 4px; width: 40px; text-align: center; font-size: 11px;">No</th>
-                                          <th style="border: 1px solid #000; padding: 0px 4px 12px 4px; width: 200px; text-align: center; font-size: 11px;">Tanggal / Hari</th>
-                                          <th style="border: 1px solid #000; padding: 0px 4px 12px 4px; width: 100px; text-align: center; font-size: 11px;">Status</th>
-                                          <th style="border: 1px solid #000; padding: 0px 4px 12px 4px; text-align: center; font-size: 11px;">Keterangan</th>
+                                          <th style="border: 1px solid #000; padding: 0px 4px 8px 4px; width: 40px; text-align: center; font-size: 10px;">No</th>
+                                          <th style="border: 1px solid #000; padding: 0px 4px 8px 4px; width: 200px; text-align: center; font-size: 10px;">Tanggal / Hari</th>
+                                          <th style="border: 1px solid #000; padding: 0px 4px 8px 4px; width: 100px; text-align: center; font-size: 10px;">Status</th>
+                                          <th style="border: 1px solid #000; padding: 0px 4px 8px 4px; text-align: center; font-size: 10px;">Keterangan</th>
                                       </tr>
                                   </thead>
                                   <tbody id="printTbodyRekapSiswa"></tbody>
@@ -2210,14 +2210,14 @@ async function downloadPDFRekapSiswa() {
         document.getElementById('printSiswaPeriode').textContent = `${blnText} ${thnText}`;
 
 
-    // Isi Tabel Print
+    // Isi Tabel Print (Font 10px dan padding bawah 8px agar muat 31 hari)
         const tbodyPrint = document.getElementById('printTbodyRekapSiswa');
         tbodyPrint.innerHTML = rs_currentData.map((d, i) => `
             <tr>
-                <td style="border: 1px solid #000; padding: 0px 4px 12px 4px; text-align: center; font-size: 11px;">${i+1}</td>
-                <td style="border: 1px solid #000; padding: 0px 4px 12px 4px; text-align: center; font-size: 11px;">${new Date(d.tanggal).toLocaleDateString('id-ID', {weekday:'long', day: 'numeric', month: 'long', year: 'numeric'})}</td>
-                <td style="border: 1px solid #000; padding: 0px 4px 12px 4px; text-align: center; font-weight: bold; font-size: 11px;">${d.status}</td>
-                <td style="border: 1px solid #000; padding: 0px 4px 12px 4px; text-align: center; font-size: 11px;">${d.keterangan || '-'}</td>
+                <td style="border: 1px solid #000; padding: 0px 4px 8px 4px; text-align: center; font-size: 10px;">${i+1}</td>
+                <td style="border: 1px solid #000; padding: 0px 4px 8px 4px; text-align: center; font-size: 10px;">${new Date(d.tanggal).toLocaleDateString('id-ID', {weekday:'long', day: 'numeric', month: 'long', year: 'numeric'})}</td>
+                <td style="border: 1px solid #000; padding: 0px 4px 8px 4px; text-align: center; font-weight: bold; font-size: 10px;">${d.status}</td>
+                <td style="border: 1px solid #000; padding: 0px 4px 8px 4px; text-align: center; font-size: 10px;">${d.keterangan || '-'}</td>
             </tr>
         `).join('');
 
