--- a/demo-SiE-MPuS/index.html
+++ b/demo-SiE-MPuS/index.html
@@ -119,10 +119,10 @@ input, button, select, textarea {
       @media (max-width: 768px) { .w-md-25 { width: 100%; } }
 
 /* Naikkan tombol scroll to top di layar HP */
-    #btn-back-to-top {
-        bottom: 85px !important; 
-        right: 20px !important;
-
+   #btn-back-to-top {
+    position: fixed;
+    bottom: 85px;
+    right: 20px;
     display: none; /* Tersembunyi default */
     z-index: 1050; /* Di atas elemen lain */
     width: 45px;
